objects/Trigger_Record_Type__mdt.object
<CustomObject>
    <description>Used to filter certain triggers by object and record type</description>
    <fields>
        <fullName>Enable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <description>The API name of the object</description>
        <inlineHelpText>Specify the Object Type (E.g. Case)</inlineHelpText>
        <label>Object Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <description>The DeveloperName of the Record Type</description>
        <inlineHelpText>Specify the DeveloperName of the record type (E.g. Technical_Support)</inlineHelpText>
        <label>Record Type Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Trigger Record Type</label>
    <listViews>
        <fullName>ALL</fullName>
        <columns>Object_Name__c</columns>
        <columns>Record_Type_Name__c</columns>
        <columns>Enable__c</columns>
        <filterScope>Everything</filterScope>
        <label>ALL</label>
    </listViews>
    <pluralLabel>Trigger Record Types</pluralLabel>
</CustomObject>